fix z-index

--- a/project-additions/dark-light-theme-swich/DarkLight.module.scss
+++ b/project-additions/dark-light-theme-swich/DarkLight.module.scss
@@ -9,6 +9,7 @@ $light-theme-circle: rgb(240, 240, 240);
     height: 3rem;
     user-select: none;
     top: 1rem;
+    z-index: 1;
     right: 1rem;
 
     & *, & {
